--- a/e-commerce-app/src/styles.scss
+++ b/e-commerce-app/src/styles.scss
@@ -118,3 +118,10 @@ html, body {
     padding: 0 20px 20px 20px !important;
   }
 }
+
+
+// FORM
+.fields-inline {
+  display: flex;
+  justify-content: space-around;
+}
