--- a/e-commerce-app/src/app/shared-components/user-data/user-data.component.html
+++ b/e-commerce-app/src/app/shared-components/user-data/user-data.component.html
@@ -16,7 +16,7 @@
       <input matInput placeholder="Telephone" formControlName="telephone" required>
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Address" formControlName="address" required>
+      <input matInput placeholder="Street" formControlName="street" required>
     </mat-form-field>
     <div class="fields-inline">
       <mat-form-field>
@@ -46,7 +46,7 @@
         <input matInput placeholder="Telephone" formControlName="telephone" readonly>
       </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="Address" formControlName="address" readonly>
+        <input matInput placeholder="Street" formControlName="street" readonly>
       </mat-form-field>
       <div class="fields-inline">
         <mat-form-field>
