--- a/e-commerce-app/src/styles.scss
+++ b/e-commerce-app/src/styles.scss
@@ -60,7 +60,6 @@ html, body {
   color: $material_green;
 }
 
-
 // SPINNER
 .my-spinner {
   display: flex;
@@ -107,21 +106,28 @@ html, body {
 }
 
 // to avoid wrong display without 'mat-step-label'
-.mat-step-label{
+.mat-step-label {
   min-width: 0 !important;
 }
 
 // change padding of checkout stepper on small devices
-.mat-horizontal-content-container{
+.mat-horizontal-content-container {
   padding: 0 5px 20px 5px !important;
   @media #{$gt-xs_size} {
     padding: 0 20px 20px 20px !important;
   }
 }
 
-
 // FORM
 .fields-inline {
   display: flex;
   justify-content: space-around;
+}
+
+.no-auth {
+  text-align: center;
+  //padding: 20px;
+  padding-right: 20px;
+  font-size: 120%;
+  color: $material_red;
 }
