--- a/e-commerce-app/src/app/shared-components/checkout/checkout.component.html
+++ b/e-commerce-app/src/app/shared-components/checkout/checkout.component.html
@@ -6,7 +6,7 @@
       <app-checkout-order [editable]="true"></app-checkout-order>
       <div class="action-end">
         <span class="no-auth" *ngIf="_authService.authAbstractControl.invalid">Sign up first</span>
-        <button mat-raised-button color="primary" matStepperNext [disabled]="_authService.authAbstractControl.invalid">Next</button>
+        <button mat-raised-button color="primary" matStepperNext [disabled]="_authService.authAbstractControl.invalid || _cartService.orders.length === 0" (click)="getUser()">Next</button>
       </div>
     </mat-step>
 
@@ -49,7 +49,7 @@
       </div>
       <div class="actions-between">
         <button mat-raised-button color="primary" matStepperPrevious>Back</button>
-        <button mat-raised-button class="order" [disabled]="_authService.authAbstractControl.invalid">order</button>
+        <button mat-raised-button class="order" [disabled]="_authService.authAbstractControl.invalid" (click)="makeOrder()">order</button>
       </div>
     </mat-step>
 
