Poprawione dane książke, dodany pipe na limit znaków, wyswietlanie miniatury książki

--- a/e-commerce-app/src/app/core-components/header/header.component.scss
+++ b/e-commerce-app/src/app/core-components/header/header.component.scss
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   z-index: 2;
-  background-color: $material_teal;
+  background-color: $material_indigo;
   padding: 10px 20px;
   color: $primary_white;
   display: flex;
