--- a/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.scss
@@ -28,3 +28,12 @@ mat-row {
     justify-content: center;
   }
 }
+
+.book-image {
+  height: 140px;
+  width: 140px;
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
