--- a/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.html
@@ -1,16 +1,15 @@
 <div class="book-container">
   <mat-card>
-    <div class="book-image">
-      <img class="" mat-card-image src="https://s3.producthunt.com/static/kitty_265x244%402x.png"
-           alt="Photo of a Shiba Inu">
+    <div class="book-image" [routerLink]="['/book', book.key]">
+      <img class="" mat-card-image [src]="book.image" [alt]="book.title + ' image'">
     </div>
 
     <mat-card-content>
       <div class="info-container">
 
         <div class="left">
-          <span class="product-name">{{book.title}}</span>
-          <span class="product-desc">{{book.desc}}</span>
+          <span class="product-name"><strong>{{book.title | limitChar: '60'}}</strong></span>
+          <!--<span class="product-desc">{{book.desc}}</span>-->
         </div>
 
         <div class="right">
@@ -24,6 +23,8 @@
 
       </div>
     </mat-card-content>
+
+    <span class="spacer-vertically"></span>
 
     <mat-card-actions class="text-center">
       <button mat-button (click)="addProductToCard()" [disabled]="book.quantity === 0">
