--- a/e-commerce-app/src/app/core-components/header/header.component.html
+++ b/e-commerce-app/src/app/core-components/header/header.component.html
@@ -63,7 +63,7 @@
   </button>
   <button mat-menu-item>
     <mat-icon>settings</mat-icon>
-    <span>Settings</span>
+    <span>Order History</span>
   </button>
   <button mat-menu-item (click)="logout()">
     <mat-icon>exit_to_app</mat-icon>
