--- a/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.scss
+++ b/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.scss
@@ -6,13 +6,18 @@
   border-bottom: 1px solid $border_color;
   padding: 10px 0 10px 10px;
   .avatar {
-    flex: 0.3;
-    &:hover {
-      cursor: pointer;
+    flex: 0.1;
+    cursor: pointer;
+    outline: none;
+    height: 70px;
+    width: 70px;
+    img {
+      max-width: 100%;
+      max-height: 100%;
     }
   }
   .name {
-    flex: 0.55;
+    flex: 0.65;
     padding: 0 5px;
     display: flex;
     flex-direction: column;
@@ -27,7 +32,7 @@
     }
   }
   .actions {
-    flex: 0.15;
+    flex: 0.25;
     .price {
       display: flex;
       justify-content: flex-end;
