--- a/e-commerce-app/src/app/shared-components/checkout/checkout-order/checkout-order.component.scss
+++ b/e-commerce-app/src/app/shared-components/checkout/checkout-order/checkout-order.component.scss
@@ -20,27 +20,38 @@
 .book {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 20px 10px;
   &:hover {
     background: $border_color;
+  }
+
+  .avatar {
+    height: 100px;
+    width: 100px;
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
 }
 
 .avatar {
   cursor: pointer;
+  outline: none;
   flex: 0;
   @media #{$gt-xs_size} {
-    flex: 0.3;
+    flex: 0.2;
   }
 }
 
 .info {
   flex: 0.6;
-  @media #{$gt-xs_size} {
-    flex: 0.5;
-  }
   display: flex;
   justify-content: space-between;
+  .author {
+    text-align: right;
+  }
 }
 
 .quantity {
@@ -51,4 +62,7 @@
   }
   display: flex;
   justify-content: space-between;
+  input {
+    max-height: 20px;
+  }
 }
