--- a/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.scss
@@ -14,14 +14,26 @@
   }
 
   .avatar {
-    flex: 0.3;
+    flex: 0.2;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
+    //padding: 24px 0 0 0;
+    .book-image {
+      margin-bottom: -2.6px;
+      max-width: 100%;
+      height: 100%;
+      img {
+        margin:0;
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
   }
 
   .info {
-    flex: 0.5;
+    flex: 0.55;
     .title {
       font-weight: 700;
       font-size: 1.1rem;
@@ -30,7 +42,7 @@
   }
 
   .actions {
-    flex: 0.2;
+    flex: 0.25;
     display: flex;
     align-items: center;
     justify-content: center;
