--- a/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.scss
@@ -1,16 +1,28 @@
 @import '../../../_helpers/variables';
 
 .book-image {
-  height: 200px;
+  height: 280px;
+  width: 280px;
+  cursor: pointer;
+  outline: none;
   img {
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
+}
+
+mat-card {
+  height: 405px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .book-container {
   padding: 10px;
   width: calc(100vw - 20px); // 100% - padding
   max-width: 280px;
+  height: 470px;
   @media #{$gt-xs_size}{
     width: 50vw;
   }
