--- a/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.html
@@ -2,18 +2,19 @@
 
   <div class="book-detail">
 
-    <!-- AVATAR-->
-    <mat-card class="avatar no-right-borders">
+
+    <mat-card class="book-info">
+      <!-- AVATAR-->
         <div class="book-image">
           <img class="" mat-card-image [src]="book.image" [alt]="book.title + ' image'">
         </div>
-    </mat-card>
 
-    <!-- INFO -->
-    <mat-card class="info no-border">
-      <p class="title">{{book.title}}</p>
-      <span class="my-hr" fxHide.xs="true"></span>
-      <span class="author">{{book.author}}</span>
+      <!-- INFO -->
+      <div class="info no-border">
+        <p class="title">{{book.title}}</p>
+        <!--<span class="my-hr" fxHide.xs="true"></span>-->
+        <span class="author">{{book.author}}</span>
+      </div>
     </mat-card>
 
     <!-- ACTIONS -->
