--- a/e-commerce-app/src/app/shared-components/auth-dialog/login/login.component.html
+++ b/e-commerce-app/src/app/shared-components/auth-dialog/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
 
-  <div class="error-msg" *ngIf="error">{{error}}</div>
+  <app-alert [msg]="error" [isSuccess]="false"></app-alert>
 
   <mat-form-field>
     <input matInput placeholder="Email" [formControl]="email" required>
