--- a/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.scss
@@ -6,38 +6,47 @@
 
 .book-detail {
   display: flex;
-  //justify-content: space-between;
   flex-direction: column;
 
-  @media #{$gt-xs_size} {
+  @media #{$gt-sm_size} {
     flex-direction: row;
   }
 
-  .avatar {
-    flex: 0.2;
+  .book-info {
+    flex: 0.75;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 0;
-    //padding: 24px 0 0 0;
+    @media #{$gt-xs_size} {
+      align-items: flex-start;
+      flex-direction: row;
+    }
+
     .book-image {
-      margin-bottom: -2.6px;
-      max-width: 100%;
-      height: 100%;
+      flex: 0.3;
+      width: 280px;
+      min-height: 280px;
+      max-height: 100%;
       img {
-        margin:0;
+        min-height: 280px;
+        min-width: 250px;
         max-width: 100%;
         max-height: 100%;
+        margin: 0;
       }
     }
-  }
 
-  .info {
-    flex: 0.55;
-    .title {
-      font-weight: 700;
-      font-size: 1.1rem;
-      letter-spacing: 1.1px;
+    .info {
+      padding: 0 10px;
+      flex: 0.7;
+      text-align: center;
+      justify-content: flex-start;
+      align-content: flex-start;
+      .title {
+        font-weight: 700;
+        font-size: 1.1rem;
+        letter-spacing: 1.1px;
+      }
     }
   }
 
@@ -74,11 +83,16 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      align-items: center;
       button {
         box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
         text-transform: uppercase;
         margin: 5px 0;
         width: 100%;
+        @media #{$sm_size} {
+          width: 50%;
+        }
+
       }
     }
   }
