--- a/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.html
@@ -49,7 +49,7 @@
             <mat-icon>add_shopping_cart</mat-icon>
             <span>add</span>
           </button>
-          <button mat-raised-button color="primary">
+          <button mat-raised-button color="primary" [routerLink]="['/checkout']">
             <mat-icon>shopping_cart</mat-icon>
             <span>checkout</span>
           </button>
