--- a/e-commerce-app/src/app/shared-components/checkout/checkout.component.scss
+++ b/e-commerce-app/src/app/shared-components/checkout/checkout.component.scss
@@ -6,8 +6,21 @@
   background-color: $primary_white;
 }
 
+.no-book {
+  margin: 20px;
+  text-align: center;
+  mat-icon{
+    width: 100px;
+    height: 100px;
+    font-size: 100px;
+    color: $material_red;
+  }
+  font-size: 110%;
+  letter-spacing: 1.2px;
+}
+
 // SECOND STEP - confirm data
-.confirm-data{
+.confirm-data {
   padding: 0 20px;
   @media #{$gt-md_size} {
     width: 50%;
@@ -17,14 +30,14 @@
 
 // THIRD STEP - confirm order
 
-.confirm-order{
+.confirm-order {
   padding: 20px 0;
   display: flex;
   flex-direction: column;
   @media #{$gt-md_size} {
     flex-direction: row;
   }
-  .panel{
+  .panel {
     margin: 10px;
     width: calc(100% - 20px);
     @media #{$gt-md_size} {
@@ -33,14 +46,13 @@
   }
 }
 
-.order{
+.order {
   background: $material_green;
   color: $primary_white;
   text-transform: uppercase;
   padding: 5px;
   font-size: 120%;
 }
-
 
 // button positions
 .actions-between {
@@ -53,14 +65,16 @@
   justify-content: flex-end;
   align-items: center;
 }
-.mat-expansion-panel{
+
+.mat-expansion-panel {
   box-shadow: none !important;
   border: 1px solid $border_color;
 }
-mat-expansion-panel-header{
+
+mat-expansion-panel-header {
   background: $border_color;
   min-height: 64px;
-  &:hover, &:focus{
+  &:hover, &:focus {
     background: $border_color !important;
   }
 }
