Wyswietlanie zamowienia, historia zamówien

--- a/e-commerce-app/src/app/core-components/header/header.component.html
+++ b/e-commerce-app/src/app/core-components/header/header.component.html
@@ -65,7 +65,7 @@
     <mat-icon>perm_identity</mat-icon>
     <span>Profile</span>
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item [routerLink]="['/orders']">
     <mat-icon>settings</mat-icon>
     <span>Order History</span>
   </button>
